mockup for profile and results pages

--- a/ctuser/html/user/results.html
+++ b/ctuser/html/user/results.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>profile</title>
+    <title>results</title>
     <link rel="stylesheet" href="/css/ct.css">
     <script src="/js/CT/ct.js"></script>
-    <script src="/js/user/pages/profile.js"></script>
+    <script src="/js/user/pages/results.js"></script>
   </head>
   <body class="noflow">
    <div id="ctheader"></div>
