profile, results: custom.css header link

--- a/ctuser/html/user/profile.html
+++ b/ctuser/html/user/profile.html
@@ -3,6 +3,7 @@
   <head>
     <title>profile</title>
     <link rel="stylesheet" href="/css/ct.css">
+    <link rel="stylesheet" href="/css/custom.css">
     <script src="/js/CT/ct.js"></script>
     <script src="/js/user/pages/profile.js"></script>
   </head>
