--- a/ctuser/html/user/results.html
+++ b/ctuser/html/user/results.html
@@ -3,6 +3,7 @@
   <head>
     <title>results</title>
     <link rel="stylesheet" href="/css/ct.css">
+    <link rel="stylesheet" href="/css/custom.css">
     <script src="/js/CT/ct.js"></script>
     <script src="/js/user/pages/results.js"></script>
   </head>
