per-page classes

--- a/ctuser/html/user/profile.html
+++ b/ctuser/html/user/profile.html
@@ -7,7 +7,7 @@
     <script src="/js/CT/ct.js"></script>
     <script src="/js/user/pages/profile.js"></script>
   </head>
-  <body class="noflow">
+  <body class="noflow ctuser-profile">
    <div id="ctheader"></div>
    <div id="ctmain"></div>
   </body>
